css/main.css
/* ... */
		input[type="submit"].disabled, input[type="submit"]:disabled,
		input[type="reset"].disabled,
		input[type="reset"]:disabled,
		input[type="button"].disabled,
		input[type="button"]:disabled,
		button.disabled,
		button:disabled,
		.button.disabled,
		.button:disabled {
			background-color: #6f7577 !important;
			box-shadow: none !important;
			color: #fff !important;
			cursor: default;
			opacity: 0.25;
		}

/* Main BG */

	.main-bg {
		-moz-transition: opacity 0.5s ease-out;
		-webkit-transition: opacity 0.5s ease-out;
		-ms-transition: opacity 0.5s ease-out;
		transition: opacity 0.5s ease-out;
		background-attachment: fixed,							fixed;
		background-position: top left,						center center;
		background-repeat: repeat,							none;
		background-size: auto,							cover;
		height: 100%;
		left: 0;
		opacity: 0;
		position: fixed;
		top: 0;
		width: 100%;
		z-index: -1;
	}

		.main-bg.active {
			opacity: 1;
		}

/* Main */

	.main {
		position: relative;
	}

		.main .image.primary {
			display: none;
		}

		.main .container {
			padding: 5em 2.5em 8em 2.5em ;
			background: rgba(255, 255, 255, 0.95);
			box-shadow: inset 0 1px 0 0 #dddddd;
		}

			.main .container:before {
				min-height: calc( 100vh - 13em );
				content: '';
				display: inline-block;
				vertical-align: middle;
				width: 1px;
			}

			.main .container .content {
				display: inline-block;
				margin-right: 1px;
				vertical-align: middle;
				width: calc(100% - 10px);
			}

		.main .goto-next {
			-moz-transition: background-color 0.2s ease-in-out;
			-webkit-transition: background-color 0.2s ease-in-out;
			-ms-transition: background-color 0.2s ease-in-out;
			transition: background-color 0.2s ease-in-out;
			background-color: rgba(144, 144, 144, 0.075);
			background-image: url("images/arrow.svg");
			background-position: center center;
			background-repeat: no-repeat;
			border-radius: 100%;
			border: 0;
			bottom: 3em;
			display: block;
			height: 4em;
			left: 50%;
			line-height: 4em;
			margin-left: -2em;
			overflow: hidden;
			position: absolute;
			text-indent: 4em;
			white-space: nowrap;
			width: 4em;
		}

			.main .goto-next:hover {
				background-color: rgba(144, 144, 144, 0.15);
			}

/* Header */

	#header {
		height: 100vh;
		position: relative;
		text-align: center;
	}

		#header:after {
			content: '';
			display: inline-block;
			height: 100vh;
			vertical-align: middle;
		}

		#header header {
			color: rgba(255, 255, 255, 0.5);
			display: inline-block;
			padding-bottom: 8em;
			vertical-align: middle;
		}

			#header header h1, #header header h2, #header header h3, #header header h4, #header header h5, #header header h6, #header header strong, #header header b {
				color: #ffffff;
			}

			#header header a {
				color: inherit;
			}

				#header header a:hover {
					color: #ffffff !important;
				}

			#header header h1 {
				font-size: 3em;
				line-height: 1.25em;
				margin: 0;
			}

				#header header h1:after {
					margin-top: 0.5em;
				}

			#header header p {
				color: #ffffff;
				font-weight: 700;
				margin: 1.5em 0 0 0;
			}

		#header .container {
			background: rgba(255, 255, 255, 0.95);
			bottom: 0;
			left: 50%;
			margin-left: -17.5em;
			padding: 2.5em;
			position: absolute;
		}

			#header .container > :last-child {
				margin-bottom: 0;
			}

			#header .container .button {
				min-width: 12em;
			}

/* Footer */

	#footer {
		min-height: 100vh;
		padding: 0 0 12em 0;
		position: relative;
		text-align: center;
	}

		#footer .container {
			padding: 5em 2.5em 3em 2.5em ;
			background: rgba(255, 255, 255, 0.95);
			box-shadow: inset 0 1px 0 0 #dddddd;
		}

		#footer .container-icons {
			padding: 7em 2.5em 3em 2.5em ;
			background: transparent;
			box-shadow: none;
		}

		#footer footer {
			bottom: 2em;
			color: rgba(255, 255, 255, 0.5);
			left: 0;
			position: absolute;
			text-align: center;
			width: 100%;
		}

			#footer footer h1, #footer footer h2, #footer footer h3, #footer footer h4, #footer footer h5, #footer footer h6, #footer footer strong, #footer footer b {
				color: #ffffff;
			}

			#footer footer a {
				color: inherit;
			}

				#footer footer a:hover {
					color: #ffffff !important;
				}

			#footer footer .copyright {
				font-size: 0.8em;
				line-height: 1em;
				padding: 0;
			}

				#footer footer .copyright li {
					border-left: solid 1px rgba(255, 255, 255, 0.2);
					display: inline-block;
					margin: 0 0 0 1em;
					padding: 0 0 0 1em;
				}

					#footer footer .copyright li:first-child {
						border-left: 0;
						margin-left: 0;
						padding-left: 0;
					}

/* Large */

	@media screen and (max-width: 1680px) {

		/* Basic */

			body, input, select, textarea {
				font-size: 12pt;
			}

	}

/* Medium */

	@media screen and (max-width: 980px) {

		/* Main BG */

			.main-bg {
				display: none;
			}

		/* Main */

			.main .image.primary {
				display: block;
				margin: 0 0 4em 0;
			}

			.main .container {
				padding: 3em 3em 8em 3em ;
			}

				.main .container:before {
					display: none;
				}

		/* Header */

			#header header {
				padding-bottom: 9em;
				width: 80%;
			}

			#header .container {
				margin-left: -40%;
				padding: 3em;
			}

		/* Footer */

			#footer {
				min-height: 0;
				padding: 0;
			}

				#footer .container {
					padding: 3em 3em 1em 3em ;
				}

				#footer footer {
					padding: 3em 3em 1em 3em ;
					bottom: auto;
					position: relative;
				}

	}
/* ... */

